--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,11 +13,12 @@ object{position:absolute;left:34%;top:-116px;width:500px;height:150px;}
 .socials a.twitter{background-position:-38px top;}.socials a.twitter:hover{background-position:-38px bottom;}
 .socials a.linkedin{background-position:-112px top;}.socials a.linkedin:hover{background-position:-112px bottom;}
 .socials a.github{background-position:-75px top;}.socials a.github:hover{background-position:-75px bottom;}
-#projects{margin-top:20px;top:113%;position:absolute;width:100%;background-color:#f7f7f7;border-top:1px solid #eeeeee;}#projects .wrapper{padding:40px 20px;width:900px;margin:0 auto;margin-top:100px;}
-#projects .imgProject{width:170px;height:193px;position:relative;top:54px;left:98px;}
-#projects #EachProject{background:url('../svg/projectbg.svg') no-repeat;width:170px;height:343px;margin:0px 13px;display:inline-block;vertical-align:top;font-weight:300;position:relative;}#projects #EachProject .linkProject{height:193.5px;text-decoration:none;display:block;position:absolute;top:169px;width:100%;left:98px;z-index:1;}
+.socials a.cv{background-position:-148px top;}.socials a.cv:hover{background-position:-148px bottom;}
+#projects{margin-top:20px;top:113%;position:absolute;width:100%;background-color:#f7f7f7;border-top:1px solid #eeeeee;}#projects .wrapper{padding:40px 20px 70px;width:900px;margin:0 auto;margin-top:100px;}
+#projects .imgProject{width:170px;height:193px;position:relative;top:39px;left:91px;}
+#projects #EachProject{background:url('../svg/projectbg.svg') no-repeat;width:170px;height:308px;margin:0px 6px;display:inline-block;vertical-align:top;font-weight:300;position:relative;}#projects #EachProject .linkProject{height:160px;text-decoration:none;display:block;position:absolute;top:169px;width:100%;left:92px;z-index:1;}
 #projects #EachProject .Title{font-family:'Open Sans';color:#FFFFFF;margin-top:60px;text-align:center;font-size:20px;}
-#projects #EachProject .desc{font-family:'Open Sans',sans-serif;color:#333333;margin-top:15px;font-size:14px;line-height:20px;text-align:center;}#projects #EachProject .desc ul{position:relative;display:inline-block;}
+#projects #EachProject .desc{height:20px;font-family:'Open Sans',sans-serif;color:#333333;margin-top:15px;font-size:14px;line-height:20px;text-align:center;padding:0 5px;}
 .modal.fade{top:-80%;}
 .modal{width:458px;left:53%;border:1px solid #dedede;background-color:#FFF;-webkit-border-radius:0px;-moz-border-radius:0px;border-radius:0px;}.modal input{margin-bottom:15px;}
 .modal .modal-header{border-bottom:1px solid #f6f6f6;text-align:center;padding:30px 0px 25px 0px;}
