--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -138,6 +138,14 @@ object{
 				background-position:-75px bottom;
 			}
 		}
+
+		&.cv{
+			background-position: -148px top;
+			&:hover
+			{
+				background-position:-148px bottom;
+			}
+		}
 	}
 }
 
@@ -150,7 +158,7 @@ object{
 	border-top: 1px solid #eeeeee;
 
 	.wrapper{
-		padding: 40px 20px;
+		padding: 40px 20px 70px;
 		width: 900px;
 		margin: 0 auto;
 		margin-top: 100px;
@@ -160,28 +168,28 @@ object{
 		width: 170px;
 		height: 193px;
 		position: relative;
-		top: 54px;
-		left: 98px;
+		top: 39px;
+		left: 91px;
 	}
 
 	#EachProject{
 		background: url('../svg/projectbg.svg') no-repeat;
 		width: 170px;
-		height: 343px;
-		margin: 0px 13px;
+		height: 308px;
+		margin: 0px 6px;
 		display: inline-block;
 		vertical-align: top;
 		font-weight: 300;
 		position: relative;
 
 		.linkProject{
-			height: 193.5px;
+			height: 160px;
 			text-decoration: none;
 			display: block;
 			position: absolute;
 			top: 169px;
 			width: 100%;
-			left: 98px;
+			left: 92px;
 			z-index: 1;
 		}
 
@@ -194,16 +202,14 @@ object{
 		}
 
 		.desc{
-			ul{
-				position: relative;
-				display: inline-block;
-			}
+			height: 20px;
 			font-family: 'Open Sans', sans-serif;
 			color: #333333;
 			margin-top: 15px;
 			font-size: 14px;
 			line-height: 20px;
 			text-align: center;
+			padding: 0 5px;
 		}
 		
 	}
