--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -24,7 +24,7 @@ body{
 
 .socials{
 	
-	width: 200px;
+	width: 240px;
 	margin:0 auto;
 	margin-top: 40px;
 	a{
@@ -68,6 +68,14 @@ body{
 			&:hover
 			{
 				background-position:-148px bottom;
+			}
+		}
+
+		&.coderbits{
+			background-position: -186px top;
+			&:hover
+			{
+				background-position:-186px bottom;
 			}
 		}
 	}
