--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -146,6 +146,14 @@ object{
 				background-position:-148px bottom;
 			}
 		}
+
+		&.coderbits{
+			background-position: -186px top;
+			&:hover
+			{
+				background-position:-186px bottom;
+			}
+		}
 	}
 }
 
@@ -241,7 +249,7 @@ object{
 
 	.modal-body{
 		padding: 30px 25px;
-		overflow-y: hidden;
+		overflow-x: hidden;
 	}
 
 	h1{
@@ -282,6 +290,12 @@ object{
 			margin: 10px;
 			color: #565656;
 			line-height: 20px;
+		}
+
+		img{
+			max-width: 100%;
+			border:1px solid #999999;
+			margin-bottom: 10px;
 		}
 		.orange{
 			color: @orange;
