Ajout hover sur project

--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -90,9 +90,7 @@ body{
 		padding: 10px 10px;
 	}
 
-	#EachProject{
-		
-		
+	.project{
 		margin:6px 0px;
 		display: block;
 		font-weight: 300;
@@ -205,6 +203,11 @@ body{
 			margin: 10px;
 			color: #565656;
 			line-height: 20px;
+		}
+		img{
+			max-width: 100%;
+			border:1px solid #999999;
+			margin-bottom: 10px;
 		}
 		.orange{
 			color: @orange;
