--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -180,7 +180,7 @@ object{
 		left: 91px;
 	}
 
-	#EachProject{
+	.project{
 		background: url('../svg/projectbg.svg') no-repeat;
 		width: 170px;
 		height: 308px;
@@ -189,6 +189,14 @@ object{
 		vertical-align: top;
 		font-weight: 300;
 		position: relative;
+		transition: all 2s ease 1s;
+
+		&.active{
+			background: url('../svg/projectbg_hover.svg') no-repeat;
+			.Title{
+				color: @orange;
+			}
+		}
 
 		.linkProject{
 			height: 160px;
@@ -224,7 +232,7 @@ object{
 }
 
 .modal.fade{
-	top: -80%;
+	top: -150%;
 }
 
 .modal{
