--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -222,3 +222,10 @@ body{
 		text-decoration: none;
 	}
 }
+#mobiles-yummy-modal{
+	.submit{
+		width: 32%;
+		display: inline-block;
+		text-decoration: none;
+	}
+}
