--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -167,7 +167,7 @@ object{
 
 	.wrapper{
 		padding: 40px 20px 70px;
-		width: 900px;
+		width: 910px;
 		margin: 0 auto;
 		margin-top: 100px;
 	}
@@ -314,6 +314,13 @@ object{
 #feux-modal{
 	.submit{
 		width: 49%;
+		display: inline-block;
+		text-decoration: none;
+	}
+}
+#mobiles-yummy-modal{
+	.submit{
+		width: 32%;
 		display: inline-block;
 		text-decoration: none;
 	}
