--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Pacifico);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800);
+@import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 
 ul,li,ol{
 	list-style: disc;
