--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -1,7 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Pacifico);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800);
-@import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700);
-
 ul,li,ol{
 	list-style: disc;
 }
@@ -98,63 +94,85 @@ object{
 	}
 }
 
+.nav-link{
+	background-image: url('../svg/sprite-rs.svg');
+	width: 36px;
+	height: 35px;
+	display: inline-block;
+}
+
 .socials{
 	display: inline-block;
 	width: 40px;
 	position: fixed;
 	right: 0px;
 	a{
-		background-image: url('../svg/sprite-rs.svg');
-		width: 36px;
-		height: 35px;
-		display: inline-block;
+		.nav-link;
+	}
+	
+}
 
-		
-
-		&.facebook{
-			background-position: 0px top;
-			&:hover
-			{
-				background-position:0px bottom;
-			}
-		}
-		&.twitter{
-			background-position: -38px top;
-			&:hover
-			{
-				background-position:-38px bottom;
-			}
-		}
-		&.linkedin{
-			background-position: -112px top;
-			&:hover
-			{
-				background-position:-112px bottom;
-			}
-		}
-		&.github{
-			background-position: -75px top;
-			&:hover
-			{
-				background-position:-75px bottom;
-			}
-		}
-
-		&.cv{
-			background-position: -148px top;
-			&:hover
-			{
-				background-position:-148px bottom;
-			}
-		}
-
-		&.coderbits{
-			background-position: -186px top;
-			&:hover
-			{
-				background-position:-186px bottom;
-			}
-		}
+.facebook{
+	background-position: 0px top;
+	&:hover
+	{
+		background-position:0px bottom;
+	}
+}
+.twitter{
+	background-position: -38px top;
+	&:hover
+	{
+		background-position:-38px bottom;
+	}
+}
+.linkedin{
+	background-position: -112px top;
+	&:hover
+	{
+		background-position:-112px bottom;
+	}
+}
+.github{
+	background-position: -75px top;
+	&:hover
+	{
+		background-position:-75px bottom;
+	}
+}
+.cv{
+	background-position: -148px top;
+	&:hover
+	{
+		background-position:-148px bottom;
+	}
+}
+.coderbits{
+	background-position: -186px top;
+	&:hover
+	{
+		background-position:-186px bottom;
+	}
+}
+.home{
+	background-position: -261px top;
+	&:hover
+	{
+		background-position: -261px bottom;
+	}
+}
+.projects{
+	background-position: -299px top;
+	&:hover
+	{
+		background-position:-299px bottom;
+	}
+}
+.love{
+	background-position: -224px top;
+	&:hover
+	{
+		background-position:-224px bottom;
 	}
 }
 
@@ -168,9 +186,8 @@ object{
 
 	.wrapper{
 		padding: 40px 20px 70px;
-		width: 910px;
+		width: 820px; // 910 for 5 per lines
 		margin: 0 auto;
-		margin-top: 100px;
 	}
 
 	.imgProject{
@@ -291,38 +308,14 @@ object{
 	}
 }
 
-#kariboo-modal{
-	.modal-body{
-		background-color: #F9F9F9;
-		font-family: 'Open Sans', sans-serif;
-		p{
-			margin: 10px;
-			color: #565656;
-			line-height: 20px;
+nav{
+	position: fixed;
+	left: 0px;
+	width: 40px;
+	display: inline-block;
+	li{
+		a{
+			.nav-link;
 		}
-
-		img{
-			max-width: 100%;
-			border:1px solid #999999;
-			margin-bottom: 10px;
-		}
-		.orange{
-			color: @orange;
-		}
-	}
-}
-
-#feux-modal{
-	.submit{
-		width: 49%;
-		display: inline-block;
-		text-decoration: none;
-	}
-}
-#mobiles-yummy-modal{
-	.submit{
-		width: 32%;
-		display: inline-block;
-		text-decoration: none;
 	}
 }
