--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -1,9 +1,10 @@
+//out: ../css/styles.css
 ul,li,ol{
 	list-style: disc;
 }
 html, body {
-  overflow-x:hidden 
-} 
+  overflow-x:hidden
+}
 
 @orange:#E95A2D;
 
@@ -37,7 +38,7 @@ html, body {
 	transform: scale(1) rotate(-45deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
 }
 object{
-	
+
 	position: absolute;
 	left: 34%;
 	top: -116px;
@@ -84,7 +85,7 @@ object{
 		-ms-transform: rotate(-180deg);
 		-o-transform: rotate(-180deg);
 		transform: rotate(-180deg);
-		
+
 	}
 
 	&:hover{
@@ -109,7 +110,7 @@ object{
 	a{
 		.nav-link;
 	}
-	
+
 }
 
 .facebook{
@@ -207,7 +208,7 @@ object{
 		vertical-align: top;
 		font-weight: 300;
 		position: relative;
-		transition: all 2s ease 1s;
+		transition: all .2s;
 
 		&.active{
 			background: url('../svg/projectbg_hover.svg') no-repeat;
@@ -245,7 +246,7 @@ object{
 			text-align: center;
 			padding: 0 5px;
 		}
-		
+
 	}
 }
 
@@ -262,11 +263,11 @@ object{
 	-webkit-border-radius: 0px;
 	-moz-border-radius: 0px;
 	border-radius: 0px;
-	
+
 	input{
 		margin-bottom: 15px;
 	}
-	
+
 	.modal-header{
 		border-bottom: 1px solid #f6f6f6;
 		text-align: center;
