--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,79 +1,1 @@
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
+ul,li,ol{list-style:disc}html,body{overflow-x:hidden}.cursor{cursor:pointer}#line{position:absolute;top:0;height:9px;width:0;background:#e95a2d;left:0;-moz-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-webkit-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-o-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-ms-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg)}#mask{position:absolute;top:0;height:4000px;background:#fff;left:0;-moz-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-webkit-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-o-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-ms-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg)}object{position:absolute;left:34%;top:-116px;width:500px;height:150px}.line{position:absolute;top:0;height:2px;width:0;background:#e95a2d;left:0;-moz-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-webkit-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-o-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);-ms-transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg);transform:scale(1) rotate(-45deg) translateX(0) translateY(0) skewX(0deg) skewY(0deg)}.scroll{background:url('../svg/arrow-intro.svg') no-repeat 50%;background-color:#e95a2d;width:50px;height:50px;-webkit-border-radius:50px;-moz-border-radius:50px;border-radius:50px;left:49%;top:80%;position:absolute;-webkit-transition:top 1s ease,-webkit-transform 1s ease;-moz-transition:top 1s ease,-moz-transform 1s ease;-ms-transition:top 1s ease,-ms-transform 1s ease;-o-transition:top 1s ease,-o-transform 1s ease;transition:top 1s ease,transform 1s ease;z-index:1}.scroll.top{-webkit-transform:rotate(-180deg);-moz-transform:rotate(-180deg);-ms-transform:rotate(-180deg);-o-transform:rotate(-180deg);transform:rotate(-180deg)}.scroll:hover{background:url('../svg/arrow-intro_o.svg') no-repeat 50%;border:1px solid #e95a2d;background-color:#fff}.nav-link{background-image:url('../svg/sprite-rs.svg');width:36px;height:35px;display:inline-block}.socials{display:inline-block;width:40px;position:fixed;right:0}.socials a{background-image:url('../svg/sprite-rs.svg');width:36px;height:35px;display:inline-block}.facebook{background-position:0 top}.facebook:hover{background-position:0 bottom}.twitter{background-position:-38px top}.twitter:hover{background-position:-38px bottom}.linkedin{background-position:-112px top}.linkedin:hover{background-position:-112px bottom}.github{background-position:-75px top}.github:hover{background-position:-75px bottom}.cv{background-position:-148px top}.cv:hover{background-position:-148px bottom}.coderbits{background-position:-186px top}.coderbits:hover{background-position:-186px bottom}.home{background-position:-261px top}.home:hover{background-position:-261px bottom}.projects{background-position:-299px top}.projects:hover{background-position:-299px bottom}.love{background-position:-224px top}.love:hover{background-position:-224px bottom}#projects{margin-top:20px;top:113%;position:absolute;width:100%;background-color:#f7f7f7;border-top:1px solid #eee}#projects .wrapper{padding:40px 20px 70px;width:820px;margin:0 auto}#projects .imgProject{width:170px;height:193px;position:relative;top:39px;left:91px}#projects .project{background:url('../svg/projectbg.svg') no-repeat;width:170px;height:308px;margin:0 6px;display:inline-block;vertical-align:top;font-weight:300;position:relative;transition:all .2s}#projects .project.active{background:url('../svg/projectbg_hover.svg') no-repeat}#projects .project.active .Title{color:#e95a2d}#projects .project .linkProject{height:160px;text-decoration:none;display:block;position:absolute;top:169px;width:100%;left:92px;z-index:1}#projects .project .Title{font-family:'Open Sans';color:#fff;margin-top:60px;text-align:center;font-size:20px}#projects .project .desc{height:20px;font-family:'Open Sans',sans-serif;color:#333;margin-top:15px;font-size:14px;line-height:20px;text-align:center;padding:0 5px}.modal.fade{top:-150%}.modal{width:458px;left:53%;border:1px solid #dedede;background-color:#fff;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0}.modal input{margin-bottom:15px}.modal .modal-header{border-bottom:1px solid #f6f6f6;text-align:center;padding:30px 0 25px 0}.modal .modal-body{padding:30px 25px;overflow-x:hidden}.modal h1{font-family:'Oxygen',sans-serif;font-size:36px;font-weight:300;color:#565656;margin-top:25px}.submit{width:100%;background-color:#e95a2d;color:#fff;font:15px 'Oxygen',sans-serif;font-weight:700;border:none;-webkit-appearance:none;padding:14px 0;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;margin-top:10px;text-align:center;z-index:2}.submit:hover{background-color:#db542b}nav{position:fixed;left:0;width:40px;display:inline-block}nav li a{background-image:url('../svg/sprite-rs.svg');width:36px;height:35px;display:inline-block}
