debug + update + style

--- a/app/partials/line.html
+++ b/app/partials/line.html
@@ -3,8 +3,8 @@
 </div>
 <div id="mask"></div>
 <div class="scroll cursor"></div>
-<div class="borderBottom ng-scope">
-  <!-- <div class="comble" style="
+<!--<div class="borderBottom ng-scope">
+   <div class="comble" style="
     background-color: #e95a2d;
     width: 23px;
     height: 15px;
@@ -36,5 +36,5 @@
     position: absolute;
     left: 98.8%;
     z-index: 2;
-    bottom: -11px;"></div> --></div>
+    bottom: -11px;"></div> </div>-->
 <script type="text/javascript" src="scripts/line.js"></script>
