--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
 <div line id="home"></div>
 <div id="projects">
   <div class="wrapper">
-    <div id="project-{{$index}}" project ng-repeat="project in projects" ng-class="(project.hover) ? 'project active' : 'project'"></div>
+    <div id="project-{{$index}}" project class="project" ng-repeat="project in projects"></div>
   </div>
 </div>
 <!-- <div id="love"></div> -->
