update mobile + cv + fav

--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -42,6 +42,26 @@
     text-decoration: none;
   }
 }
+.imgProject{
+  &.mobile-yummy{
+      background-image:url('../images/mobile-yummy.png');
+    }
+    &.city-dashboard{
+      background-image:url('../images/city-bg.png');
+    }&.kariboo{
+      background-image:url('../images/kariboo-bg.png');
+    }&.feux-vert{
+      background-image:url('../images/feux-bg.png');
+    }&.palm{
+      background-image:url('../images/palm-bg.png');
+    }&.semaine-digitale{
+      background-image:url('../images/semaine-bg.png');
+    }&.daubert{
+      background-image:url('../images/daubert-bg.png');
+    }&.ipassemploi{
+      background-image:url('../images/ipassemploi-bg.png');
+    }
+}
 #mobiles-yummy-modal{
   .submit{
     width: 32%;
