move projets > tech + style + wording / Create all timeline stuff

--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -42,7 +42,7 @@
     text-decoration: none;
   }
 }
-.imgProject{
+.imgTech{
   &.mobile-yummy{
       background-image:url('../images/mobile-yummy.png');
     }
