--- a/app/styles/mobile.less
+++ b/app/styles/mobile.less
@@ -78,7 +78,7 @@ body{
   }
 }
 
-#projects{
+#technos{
   margin-top: 20px;
   top: 100%;
   width: 100%;
@@ -87,12 +87,12 @@ body{
     padding: 10px 10px;
   }
 
-  .project{
+  .tech{
     margin:6px 0px;
     display: block;
     font-weight: 300;
 
-    .imgProject{
+    .imgTech{
       width: 70px;
       height: 100%;
       position: absolute;
@@ -101,7 +101,7 @@ body{
       background-position: 50%;
     }
 
-    .linkProject{
+    .linkTech{
       text-decoration: none;
     }
 
