--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
-    <li><a href="#home" class="nav-link home"></a></li>
-    <li><a href="#projects" class="nav-link projects"></a></li>
-    <!--  <li><a href="#love" class="nav-link love"></a></li>-->
+    <li><a href="#" data-element="home" class="nav-link home"></a></li>
+    <li><a href="#" data-element="projects" class="nav-link projets"></a></li>
+    <li><a href="#" data-element="techs" class="nav-link technos"></a></li>
   </ul>
 </nav>
