--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,6 @@
 //out: ../css/styles.css
 ul,li,ol{
-  list-style: disc;
+  list-style: none;
 }
 body {
   overflow-x:hidden;
@@ -14,8 +14,10 @@ body {
 
 @orange:#E95A2D;
 @grey:#F7F7F7;
-@projectW:132px;
-@projectH:150px;
+@techW:132px;
+@techH:150px;
+@oxygen:'Oxygen', sans-serif;
+@open:'Open Sans', sans-serif;
 
 .cursor{
   cursor: pointer;
@@ -189,42 +191,39 @@ body {
     background-position: -261px bottom;
   }
 }
-.projects{
-  background-position: -299px top;
-  &:hover
-  {
-    background-position:-299px bottom;
-  }
-}
-.love{
+.technos{
   background-position: -224px top;
   &:hover
   {
     background-position:-224px bottom;
   }
 }
+.projets{
+  background-position: -299px top;
+  &:hover
+  {
+    background-position:-299px bottom;
+  }
+}
 
-#projects{
+#technos{
   width: 100%;
-  background-color: #f7f7f7;
-  border-top: 1px solid #eeeeee;
-
   .wrapper{
     padding: 40px 20px;
     width: 904px;
     margin: 0 auto;
   }
 
-  .imgProject{
-    width: @projectW;
-    height: @projectH;
+  .imgTech{
+    width: @techW;
+    height: @techH;
     background-size: 100% auto;
   }
 
-  .project{
+  .tech{
     
-    width: @projectW;
-    height: @projectH;
+    width: @techW;
+    height: @techH;
     margin: 0px 6px;
     display: inline-block;
     vertical-align: top;
@@ -233,22 +232,15 @@ body {
     transition: all .2s;
 
     &.odd{
-      left:(@projectW/2)+6;
+      left:(@techW/2)+6;
     }
 
     .back{
-      background: url('../images/projectbg.svg') no-repeat;
+      background: url('../images/techbg.svg') no-repeat;
       background-size: 100% auto;
     }
 
-    &.active{
-      background: url('../images/projectbg_hover.svg') no-repeat;
-      .Title{
-        color: @orange;
-      }
-    }
-
-    .linkProject{
+    .linkTech{
       height: 160px;
       text-decoration: none;
       display: block;
@@ -260,15 +252,16 @@ body {
     }
 
     .Title{
-      font-family: 'Open Sans';
+      font-family: @open;
       color: #FFFFFF;
       text-align: center;
-      font-size: 20px;
+      font-size: 16px;
+      padding-top: 37px;
     }
 
     .desc{
       height: 20px;
-      font-family: 'Open Sans', sans-serif;
+      font-family: @open;
       color: #333333;
       margin-top: 15px;
       font-size: 14px;
@@ -306,7 +299,7 @@ body {
   }
 
   h1{
-    font-family: 'Oxygen', sans-serif;
+    font-family: @oxygen;
     font-size: 36px;
     font-weight: 300;
     color: #565656;
@@ -363,8 +356,8 @@ nav{
   }
 
 .flip-container, .front, .back {
-  width: @projectW;
-  height: @projectH;
+  width: @techW;
+  height: @techH;
 }
 
 /* flip speed goes here */
@@ -394,3 +387,205 @@ nav{
 .back {
   transform: rotateY(180deg);
 }
+
+/** TIMELINE **/
+
+.timelineContainer{
+  background-color: @grey;
+}
+
+#timeline{
+  font-family: @open;
+  font-weight: 300;
+  color: @orange;
+}
+
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  position: relative;
+}
+.timeline:before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  content: " ";
+  width: 3px;
+  background-color: #eeeeee;
+  left: 50%;
+  margin-left: -1.5px;
+}
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+  width: 50%;
+  float: left;
+  clear: left;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+.timeline > li > .timeline-panel {
+  width: 95%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  /*border-radius: 2px;*/
+  /*padding: 20px;*/
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+  position: absolute;
+  top: 26px;
+  right: -15px;
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  content: " ";
+}
+.timeline > li > .timeline-panel:after {
+  position: absolute;
+  top: 27px;
+  right: -14px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
+}
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 24px;
+  height: 24px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 17px;
+  right: -12px;
+  z-index: 100;
+}
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+.timeline-badge > i {
+  color: @orange !important;
+}
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
+}
+.timeline-body > p,
+.timeline-body > ul {
+    padding:20px;
+    margin-bottom: 0;
+}
+.timeline-body > p + p {
+  margin-top: 5px;
+}
+.timeline-footer{
+    padding:20px;
+    background-color:#f4f4f4;
+}
+.timeline-footer > a{
+    cursor: pointer;
+    text-decoration: none;
+}
+.timeline > li.timeline-inverted{
+  float: right; 
+  clear: right;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.timeline > li:nth-child(2){
+  margin-top: 60px;
+}
+.timeline > li.timeline-inverted > .timeline-badge{
+  left: -12px;
+}
+
+@media (max-width: 767px) {
+    ul.timeline:before {
+        left: 40px;
+    }
+
+    ul.timeline > li {
+      margin-bottom: 20px;
+      position: relative;
+      width:90%;
+      float: left;
+      clear: left;
+    }
+    ul.timeline > li > .timeline-panel {
+        width: ~"calc(100% - 70px)";
+        width: ~"-moz-calc(100% - 70px)";
+        width: ~"-webkit-calc(100% - 70px)";
+    }
+
+    ul.timeline > li > .timeline-badge {
+        left: 28px;
+        margin-left: 0;
+        top: 16px;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        float: right;
+    }
+
+        ul.timeline > li > .timeline-panel:before {
+            border-left-width: 0;
+            border-right-width: 15px;
+            left: -15px;
+            right: auto;
+        }
+
+        ul.timeline > li > .timeline-panel:after {
+            border-left-width: 0;
+            border-right-width: 14px;
+            left: -14px;
+            right: auto;
+        }
+    
+.timeline > li.timeline-inverted{
+  float: left; 
+  clear: left;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.timeline > li.timeline-inverted > .timeline-badge{
+  left: 28px;
+}
+}
+
+/** END TIMELINE **/
