--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -214,6 +214,22 @@ body {
     margin: 0 auto;
   }
 
+  .filters{
+    font-size: 20px;
+    text-transform: uppercase;
+    color: @grey;
+    text-align: center;
+    font-family: @open;
+    margin-bottom: 20px;
+    span{
+      transition: all .3s ease 0s;
+      &.active,&:hover{
+        color: @orange;
+      }
+      cursor: pointer;
+    }
+  }
+
   .imgTech{
     width: @techW;
     height: @techH;
@@ -230,6 +246,10 @@ body {
     font-weight: 300;
     position: relative;
     transition: all .2s;
+
+    &.disabled{
+      opacity: .2;
+    }
 
     &.odd{
       left:(@techW/2)+6;
