--- a/app/partials/timeline.html
+++ b/app/partials/timeline.html
@@ -1,17 +1,18 @@
 <div class="timeline-badge primary"><i class="ion-ios7-circle-filled"></i></div>
 <div class="timeline-panel">
   <div class="timeline-heading">
-    <img class="img-responsive" src="http://lorempixel.com/1600/500/sports/2" />
-    
+    <img class="img-responsive" ng-src="images/projets/{{project.image}}" />
   </div>
   <div class="timeline-body">
-    <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-   
-  </div>
-  
-  <div class="timeline-footer">
-      <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
-      <a><i class="glyphicon glyphicon-share"></i></a>
-      <a class="pull-right">Continuar Lendo</a>
+    <h3>{{project.title[$parent.$parent.lang]}}</h3>
+    <p description lang="{{lang}}"></p>
+    <div class="links" ng-if="project.url">
+      <hr>
+      <a ng-href="{{u.url}}" ng-repeat="u in project.url" target="_blank">
+        {{u[$parent.$parent.$parent.$parent.lang]}}
+        <i class="ion-log-out"></i>
+        <div class="clear"></div>
+      </a>
+    </div>
   </div>
 </div>
