--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -22,6 +22,17 @@ body {
 .cursor{
   cursor: pointer;
 }
+.tooltip{
+  &.right .tooltip-arrow {
+    border-right-color: @orange;
+  }
+  
+  .tooltip-inner{
+    border-radius: 0px;
+    background-color: @orange;
+  }
+  
+}
 #line{
   position:relative;
   top:0;
@@ -229,7 +240,7 @@ body {
   .filters{
     font-size: 20px;
     text-transform: uppercase;
-    color: #EEEEEE;
+    color: #DDDDDD;
     text-align: center;
     font-family: @open;
     margin-bottom: 20px;
