Update website to match new projects and new technologies

--- a/app/partials/tech.html
+++ b/app/partials/tech.html
@@ -6,7 +6,7 @@
     <div class="back">
       <div class="Title">{{tech.title}}</div>
       <div class="desc">
-        {{tech.description}}
+        {{tech.description | translate}}
       </div>
     </div>
   </div>
