--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -17,7 +17,7 @@ ul,li{
   .modal-body{
     background-color: #F9F9F9;
     font-family: 'Open Sans', sans-serif;
-    
+
     img{
       max-width: 100%;
       border:1px solid #999999;
@@ -176,6 +176,21 @@ ul,li{
   &.css3{
     background-image:url('../images/logos/css3-logo.png');
   }
+  &.aws{
+    background-image:url('../images/logos/aws-logo.png');
+  }
+  &.mariadb{
+    background-image:url('../images/logos/mariadb-logo.png');
+  }
+  &.loopback{
+    background-image:url('../images/logos/loopback-logo.png');
+  }
+  &.docker{
+    background-image:url('../images/logos/docker-logo.png');
+  }
+  &.nginx{
+    background-image:url('../images/logos/nginx-logo.png');
+  }
 }
 #mobiles-yummy-modal{
   .submit{
@@ -332,7 +347,7 @@ ul,li{
     text-decoration: none;
 }
 .timeline > li.timeline-inverted{
-  float: right; 
+  float: right;
   clear: right;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -385,9 +400,9 @@ ul,li{
             left: -14px;
             right: auto;
         }
-    
+
 .timeline > li.timeline-inverted{
-  float: left; 
+  float: left;
   clear: left;
   margin-top: 30px;
   margin-bottom: 30px;
