Add chef as tech

--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -191,6 +191,9 @@ ul,li{
   &.nginx{
     background-image:url('../images/logos/nginx-logo.png');
   }
+  &.chef{
+    background-image:url('../images/logos/chef-logo.png');
+  }
 }
 #mobiles-yummy-modal{
   .submit{
