Debug project, fix markup. Fix techno, fix dependencies. Remove ng-translate tmp

--- a/src/app/technos/techno-mobile.html
+++ b/src/app/technos/techno-mobile.html
@@ -1,5 +1,6 @@
-<div class="title">{{techno.title}}</div>
-<div class="linkTech cursor" [hidden]='!techno.event.active' (click)='events("{{techno.event.value}}")'>
+{{techno | json}}
+<!-- <div class="title">{{techno.title}}</div>
+<div class="linkTech cursor" [hidden]='!techno.event.active'>
   <div class="desc">
     {{techno.description}}
     <div class="imgTech" *ngClass="techno.CSSClass"></div>
@@ -10,4 +11,4 @@
     {{techno.description}}
     <div class="imgTech" *ngClass="techno.CSSClass"></div>
   </div>
-</a>
+</a> -->
