--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -1,10 +1,15 @@
 <div class="timelineContainer">
   <div class="container">
       <div class="page-header text-center">
-          <h1 id="timeline">{{'PROJECTS' | translate}}</h1>
+<!--           <h1 id="timeline">{{'PROJECTS' | translate}}</h1> -->
+        <h1>
+          PROJECTS
+        </h1>
       </div>
       <ul class="timeline">
-        <li timeline *ngFor="#project of projects" *ngClass="{'timeline-inverted': project.inverted}"></li>
+        <li *ngFor="#project of projects" [ngClass]="{'timeline-inverted': project.inverted}">
+          <project [project]="project"></project>
+        </li>
         <li class="clearfix" style="float: none;"></li>
       </ul>
   </div>
