--- a/src/app/technos/techno.html
+++ b/src/app/technos/techno.html
@@ -1,12 +1,12 @@
 <div class="flip-container" (ontouchstart)="this.classList.toggle('hover');">
   <div class="flipper">
     <div class="front">
-      <div class="imgTech" *ngClass="techno.CSSClass"></div>
+      <div class="imgTech" [ngClass]="techno.CSSClass"></div>
     </div>
     <div class="back">
       <div class="title">{{techno.title}}</div>
       <div class="desc">
-        {{techno.description | translate}}
+        {{techno.description}}
       </div>
     </div>
   </div>
