--- a/src/app/technos/technos.html
+++ b/src/app/technos/technos.html
@@ -1,3 +1,3 @@
 <div class="techs">
-      <techno id="techno-{{$index}}" class="tech" *ngClass="{disabled: techno.disabled}" *ngFor="techno of technos"></techno>
+  <techno id="techno-{{i}}" class="tech" [ngClass]="{disabled: techno.disabled}" *ngFor="#techno of technos; #i = index" [techno]="techno"></techno>
 </div>
