--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,3 @@
 <line id="home"></line>
-<projects></projects>
-<technos></technos>
+<projects id="projects"></projects>
+<technos id="technos"></technos>
