--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,6 +1,6 @@
-@import url("http://fonts.googleapis.com/css?family=Pacifico");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
-@import url("http://fonts.googleapis.com/css?family=Oxygen:400,300,700");
+@import url(http://fonts.googleapis.com/css?family=Pacifico);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800);
+@import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 
 $orange:#E95A2D;
 $grey:#F7F7F7;
