--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -2,9 +2,7 @@
   <div class="container">
       <div class="page-header text-center">
 <!--           <h1 id="timeline">{{'PROJECTS' | translate}}</h1> -->
-        <h1>
-          PROJECTS
-        </h1>
+        <h1 id="timeline">{{'PROJECTS'}}</h1>
       </div>
       <ul class="timeline">
         <li *ngFor="#project of projects" [ngClass]="{'timeline-inverted': project.inverted}">
