--- a/src/app/components/projects/project.html
+++ b/src/app/components/projects/project.html
@@ -1,4 +1,4 @@
-<div class="timeline-badge primary"><i class="ion-ios7-circle-filled"></i></div>
+<div class="timeline-badge primary"><i class="ion-ios-circle-filled"></i></div>
 <div class="timeline-panel">
   <div class="timeline-heading">
     <img class="img-responsive" [src]="'images/projects/' + project.image" />
