--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
-    <li><a href="#" data-toggle="tooltip" data-placement="right" data-key="HOME" data-element="home" class="nav-link home"></a></li>
-    <li><a href="#" data-toggle="tooltip" data-placement="right" data-key="PROJECTS" data-element="projects" class="nav-link projets"></a></li>
-    <li><a href="#" data-toggle="tooltip" data-placement="right" data-key="TECHS" data-element="techs" class="nav-link technos"></a></li>
+    <li><a href="#" data-toggle="tooltip" data-placement="right" data-key="HOME" class="nav-link home" (click)="moveTo('home')"></a></li>
+    <li><a href="#" data-toggle="tooltip" data-placement="right" data-key="PROJECTS" class="nav-link projets" (click)="moveTo('projects')"></a></li>
+    <li><a href="#" data-toggle="tooltip" data-placement="right" data-key="TECHS" class="nav-link technos" (click)="moveTo('techs')"></a></li>
 <!--     <li><div class="nav-link fr" ng-show="$parent.lang=='en'" ng-click="changeLanguage('fr')"></div></li>
     <li><div class="nav-link en" ng-show="$parent.lang=='fr'" ng-click="changeLanguage('en')"></div></li> -->
      <li><div class="nav-link fr"></div></li>
