Fix socials. Add grails / webpack technos. Add nowtv image. remove mobile stuff

--- a/src/app/components/line/line.html
+++ b/src/app/components/line/line.html
@@ -2,4 +2,4 @@
   <object data="images/logo.svg" id="logo" type="image/svg+xml"></object>
 </div>
 <div id="mask"></div>
-<div class="scroll cursor"></div>
+<div class="scroll cursor" (click)="moveToProjects()"></div>
