--- a/src/app/styles/socials/_socials.scss
+++ b/src/app/styles/socials/_socials.scss
@@ -1,3 +1,5 @@
+@import '../nav/nav';
+
 .socials{
   display: inline-block;
   width: 40px;
@@ -6,7 +8,6 @@
   a{
     @extend .nav-link;
   }
-
 }
 
 .facebook{
