Fix assets folder. Fix ts errors. hide technos for mobile. delete useless code.

--- a/src/app/components/projects/project.html
+++ b/src/app/components/projects/project.html
@@ -1,7 +1,7 @@
 <div class="timeline-badge primary"><i class="ion-ios-circle-filled"></i></div>
 <div class="timeline-panel">
   <div class="timeline-heading">
-    <img class="img-responsive" [src]="'images/projects/' + project.image" />
+    <img class="img-responsive" [src]="'assets/images/projects/' + project.image" />
   </div>
   <div class="timeline-body">
     <h3>{{project.title | multiLang}}</h3>
