--- a/src/app/styles/app/_app.scss
+++ b/src/app/styles/app/_app.scss
@@ -1,5 +1,6 @@
 @import '../variables';
 @import '~bootstrap/dist/css/bootstrap';
+$ionicons-font-path: "/assets/fonts";
 @import '~ionicons/scss/ionicons';
 
 body {
