--- a/src/app/styles/nav/_nav.scss
+++ b/src/app/styles/nav/_nav.scss
@@ -1,5 +1,5 @@
 .nav-link{
-  background-image: url('/images/sprite-rs.svg');
+  background-image: url('/assets/images/sprite-rs.svg');
   width: 37px;
   height: 35px;
   display: inline-block;
