--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <line id="home"></line>
+<mobile-home id="mobile-home"></mobile-home>
 <projects id="projects"></projects>
 <technos id="technos"></technos>
 <div nav></div>
