--- a/src/app/styles/app/_app.scss
+++ b/src/app/styles/app/_app.scss
@@ -119,3 +119,14 @@ app, #home, #technos {
   width: 100%;
   overflow-y: hidden;
 }
+
+@media screen and (max-width: 800px) {
+  #home, [nav], socials:not(.socials_mobile) {
+    display:none;
+  }
+}
+@media screen and (min-width: 800px) {
+  #mobile-home {
+    display:none;
+  }
+}
